Ajouter la fonction d'envoyer un courriel des qu'une inscription a ete fait

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     },
     "require": {
-        "twig/twig": "^3.21"
+        "twig/twig": "^3.21",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
